2010-03-30 Sebastiaan de Jonge (SebastiaanDeJonge.com)  <szebi.eger@gmail.com>

	* initial code generated with kickstarter